--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moaqzdev/otp-input",
-  "version": "0.2.0-alpha",
+  "version": "0.2.0",
   "description": "One-time password input component",
   "type": "module",
   "author": {
@@ -24,7 +24,8 @@
       "types": "./dist/index.d.mts",
       "default": "./dist/index.mjs"
     },
-    "./themes/default": "./dist/themes/default.css"
+    "./themes/default": "./dist/themes/default.css",
+    "./themes/separated": "./dist/themes/separated.css"
   },
   "types": "./dist/index.d.mts",
   "files": [
